fix: replace m with B

--- a/lecture3.Rmd
+++ b/lecture3.Rmd
@@ -437,7 +437,7 @@ Example of context-specific optimization.
 
 --
 
-If $n < m$, then binning will not help
+If $n < B$, then binning will not help
 
 ---
 
