--- a/lecture4.Rmd
+++ b/lecture4.Rmd
@@ -1,31 +1,43 @@
 ---
-title: "Nearest neighbors and splines"
-author: "Niels Richard Hansen"
-date: "September 16, 2021"
-output:
-  xaringan::moon_reader:
-    css: ["default", "science.css"]
-    nature:
-      highlightLines: true
-      countIncrementalSlides: false
-      ratio: '16:10'
-      navigation:
-        scroll: false
+title: "Nearest Neighbors and Smoothing Splines"
+subtitle: "Computational Statistics"
+author: "Johan Larsson Niels Richard Hansen"
+date: "September 12, 2024"
 ---
 
-## A time series
+```{r setup, include=FALSE}
+knitr::knit_hooks$set(crop = knitr::hook_pdfcrop)
 
-```{r, echo=FALSE, message=FALSE}
-library("tidyverse")
-library("microbenchmark")
 knitr::opts_chunk$set(
-  fig.width = 6, fig.height = 4, cache = TRUE, dpi = 144,
-  out.height = 400,
-  dev.args = list(bg = "transparent"),
-  fig.align = "center", comment = NA
+  fig.width = 7,
+  fig.height = 4,
+  fig.retina = 3,
+  fig.align = "center",
+  cache = FALSE,
+  autodep = TRUE,
+  dev.args = list(pointsize = 16),
+  crop = TRUE
 )
-theme_replace(plot.background = element_rect(fill = NA, color = NA))
-Nuuk <- read_table("data/nuuk.dat.txt",
+
+library(tidyverse)
+theme_set(theme_grey(base_size = 16))
+```
+
+## Today
+
+### Nearest neighbors
+
+### Smoothing Splines
+
+### S3 Class for Smoothing Splines
+
+---
+
+## Nuuk Temperature Data
+
+```{r looad-nuuk-data, echo=FALSE, message=FALSE}
+nuuk <- read_table(
+  "data/nuuk.dat.txt",
   col_names = c("Year", 1:12),
   na = "-999",
   skip = 1
@@ -34,23 +46,28 @@ Nuuk <- read_table("data/nuuk.dat.txt",
   mutate(Temperature = Temperature / 10) %>%
   filter(Year > 1866)
 
-Nuuk_year <- group_by(Nuuk, Year) %>%
+nuuk_year <- group_by(nuuk, Year) %>%
   summarise(
     Temperature = mean(Temperature),
     Median = median(Temperature),
     High = max(Temperature),
     Low = min(Temperature)
   )
-n <- nrow(Nuuk_year)
+n <- nrow(nuuk_year)
 ```
 
 ```{r}
-p <- qplot(Year, Temperature, data = Nuuk_year)
+library(tidyverse)
+
+p <- ggplot(nuuk_year, aes(Year, Temperature)) +
+  geom_point()
 p
 ```
 
+Data available [here](data/nuuk.dat.txt).
+
 ---
-## Nearest neighbor estimation
+## Nearest Neighbor Estimation
 
 Data: $(x_1, y_1), \ldots, (x_n, y_n)$
 
@@ -61,12 +78,11 @@ where $N(x)$ is the set of indices for the $k$ nearest neighbors of $x$.
 --
 
 This is an estimator of
-
 $$f(x) = E(Y \mid X = x).$$
 
 
 ---
-## Nearest neighbor estimation
+## Nearest Neighbor Estimation
 
 The estimator in $x_i$ is 
 $$\hat{f}_i = \frac{1}{k} \sum_{j \in N_i} y_j$$
@@ -81,7 +97,7 @@ $$\hat{\mathbf{f}} = (\hat{f}_i) = \mathbf{S} \mathbf{y}.$$
 $\hat{\mathbf{f}}$ is an estimator of the vector $(f(x_i))$. 
 
 ---
-## Linear smoothers
+## Linear Smoothers
 
 Any estimator of $(f(x_i))$ of the form $\mathbf{S} \mathbf{y}$ 
 for a *smoother matrix* $\mathbf{S}$ is called a *linear smoother*.
@@ -99,7 +115,7 @@ is theoretically useful, but often not the best way to actually
 compute $\hat{\mathbf{f}}$.
 
 ---
-## Running mean
+## Running Mean
 
 When $x_i \in \mathbb{R}$ we can sort data according to $x$-values and then use 
 a *symmetric* neighbor definition:
@@ -114,10 +130,10 @@ This simplifies computations: we don't need to keep track of metric comparisons,
 only the order matters. 
 
 ---
-## Running mean 
+## Running Mean 
 
 Implementation (assuming $y$ in correct order) using the identity
-$$\hat{f}_{i+1} = \hat{f}_{i} - y_{i - (k-1)/2} / k + y_{i + (k + 1)/2} / k,$$
+$$\hat{f}_{i+1} = \hat{f}_{i} - y_{i - (k-1)/2} / k + y_{i + (k + 1)/2} / k.$$
 
 
 ```{r runMean}
@@ -139,8 +155,8 @@ run_mean <- function(y, k) {
 ---
 ## Visualization
 
-```{r Nuuk-NN-plot2, dependson=c("NuukSmooth", "runMean"), warning=FALSE}
-f_hat <- run_mean(Nuuk_year$Temperature, 11)
+```{r nuuk-NN-plot2, warning=FALSE}
+f_hat <- run_mean(nuuk_year$Temperature, 11)
 p + geom_line(aes(y = f_hat), color = "blue")
 ```
 
@@ -149,8 +165,8 @@ p + geom_line(aes(y = f_hat), color = "blue")
 
 The R function `filter()` computes running means and moving averages 
 
-```{r runMeanCheck, dependson="runMean"}
-f_hat_filter <- stats::filter(Nuuk_year$Temperature, rep(1 / 11, 11))
+```{r runMeanCheck}
+f_hat_filter <- stats::filter(nuuk_year$Temperature, rep(1 / 11, 11))
 range(f_hat_filter - f_hat, na.rm = TRUE)
 ```
 
@@ -163,87 +179,79 @@ options(digits = op$digits)
 
 
 ---
-## Benchmarking
+## Benchmarking (Using `bench::press()`)
 
-```{r runMeanBench, dependson="runMean", echo=FALSE, warning=FALSE}
-y <- rnorm(4196)
-w <- c(rep(1 / 11, 11), rep(0, 512 - 10))
-S1 <- matrix(w, 512 - 10, 512, byrow = TRUE)
-w <- c(rep(1 / 11, 11), rep(0, 1024 - 10))
-S2 <- matrix(w, 1024 - 10, 1024, byrow = TRUE)
-w <- c(rep(1 / 11, 11), rep(0, 2048 - 10))
-S3 <- matrix(w, 2048 - 10, 2048, byrow = TRUE)
-w <- c(rep(1 / 11, 11), rep(0, 4196 - 10))
-S4 <- matrix(w, 4196 - 10, 4196, byrow = TRUE)
-tmp <- microbenchmark(
-  S1 %*% y[1:512],
-  S2 %*% y[1:1024],
-  S3 %*% y[1:2048],
-  S4 %*% y[1:4196],
-  run_mean(y[1:512], k = 11),
-  run_mean(y[1:1024], k = 11),
-  run_mean(y[1:2048], k = 11),
-  run_mean(y[1:4196], k = 11),
-  stats::filter(y[1:512], rep(1 / 11, 11)),
-  stats::filter(y[1:1024], rep(1 / 11, 11)),
-  stats::filter(y[1:2048], rep(1 / 11, 11)),
-  stats::filter(y[1:4196], rep(1 / 11, 11))
+```{r runMeanBench, echo=FALSE, warning=FALSE, message = FALSE, cache = TRUE, fig.height = 5.5, fig.width = 12}
+nn_bench <- bench::press(
+  n = c(512, 1024, 2048, 4196),
+  {
+    k <- 11
+    y <- rnorm(n)
+    w <- c(rep(1 / k, k), rep(0, n - 10))
+    S <- matrix(w, n - 10, n, byrow = TRUE)
+    bench::mark(
+      S %*% y,
+      run_mean(y, k = k),
+      stats::filter(y, rep(1 / k, k)),
+      check = FALSE
+    )
+  }
 )
-summary(tmp)[, c(1, 5)]
+
+plot(nn_bench)
 ```
 
-Unit: microseconds
---
-
-
 The Matrix-vector multiplication is $O(n^2)$.
---
 
+--
 
 The two other algorithms are $O(n)$. 
 
 ---
-## Bias-variance tradeoff
+
+## Bias-Variance Trade-Off
 
 If data is i.i.d. with $V(Y \mid X) = \sigma^2$ and $f(x) = E(Y \mid X = x)$.
 
 \begin{aligned}
-\mathrm{MSE}(x) & =  E((f(x) - \hat{f}(x))^2) \\
-& = E((f(x)-E(\hat{f}(x)))^2) + 
-E((\hat{f}(x)-E(\hat{f}(x)))^2)
+\mathrm{MSE}(x) & =  \operatorname{E}\big((f(x) - \hat{f}(x))^2\big) \\
+& = \operatorname{E}\big((f(x)-\operatorname{E}(\hat{f}(x)))^2\big) + 
+\operatorname{E}\big((\hat{f}(x)-\operatorname{E}(\hat{f}(x)))^2\big)
 \end{aligned}
 
 --
 Thus
 
 \begin{aligned}
-\mathrm{MSE}(x) & = \underbrace{\left[f(x) - \frac{1}{k} \sum_{l \in
-    N(x)} f(x_l)\right]^2}_{\textrm{squared bias}} + 
-    \underbrace{\frac{\sigma^2}{k}}_{\textrm{variance}}
+\operatorname{MSE}(x) & = \underbrace{\left[f(x) - \frac{1}{k} \sum_{l \in
+    N(x)} f(x_l)\right]^2}_{\text{squared bias}} + 
+    \underbrace{\frac{\sigma^2}{k}}_{\text{variance}}
 \end{aligned}
 
 
 --
 
-Small $k$ gives large variance and small bias (if $f$ is smooth).
-Large $k$ gives small variance and potentially large bias (if $f$ is not constant).
+- Small $k$ gives large variance and small bias (if $f$ is smooth).
+- Large $k$ gives small variance and potentially large bias (if $f$ is not constant).
 
 
 
 ---
-## LOOCV 
+
+## LOOCV
 
 The running mean / nearest neighbour smoother is a *linear smoother*,
 $\hat{\mathbf{f}} = \mathbf{S} \mathbf{Y}.$
---
 
+--
 
 How to predict $y_i$ if $(x_i, y_i)$ is left out?
---
 
+--
 
 A *definition* for a linear smoother is 
 $$\hat{f}^{-i}_i = \sum_{j \neq i} \frac{S_{ij}y_j}{1 - S_{ii}}.$$
+
 --
 
 
@@ -275,13 +283,13 @@ for this.
 ---
 ##LOOCV 
 
-```{r Nuuk-running-loocv, dependson=c("LOOCV-runMean", "NuukData"), out.height = 333}
+```{r nuuk-running-loocv}
 k <- seq(3, 40, 2)
-CV <- sapply(k, function(kk) loocv(kk, Nuuk_year$Temperature))
+CV <- sapply(k, function(kk) loocv(kk, nuuk_year$Temperature))
 ```
 --
 
-```{r Nuuk-running-loocv-plot, dependson=c("Nuuk-running-loocv", "LOOCV-runMean", "NuukData"), out.height = 333}
+```{r nuuk-running-loocv-plot}
 k_opt <- k[which.min(CV)]
 qplot(k, CV) + geom_line() + geom_vline(xintercept = k_opt, color = "red")
 ```
@@ -293,21 +301,22 @@ qplot(k, CV) + geom_line() + geom_vline(xintercept = k_opt, color = "red")
 
 The optimal choice of $k$ is `r k_opt`.
 
-```{r Nuuk-NN-plot3, dependson=c("NuukData", "runMean", "Nuuk-running-loocv"), warning=FALSE, out.height=350}
-p + geom_line(aes(y = run_mean(Nuuk_year$Temperature, k_opt)), color = "blue")
+```{r nuuk-NN-plot3, warning=FALSE}
+p + geom_line(aes(y = run_mean(nuuk_year$Temperature, k_opt)), color = "blue")
 ```
 
 ---
-## Smoothing splines 
+## Smoothing Splines 
 
-The minimizer of 
+The minimizer of
 $$L(f) = \sum_{i=1}^n (y_i - f(x_i))^2 + \lambda \underbrace{\int f''(z)^2 \mathrm{d} z}_{\|f''\|_2^2}$$
 is a cubic spline
 --
 
 with *knots* in the data points $x_i$, that is, a function 
 $$f = \sum_j \beta_j \varphi_j$$
-where $\varphi_j$ are basis functions for the $n$-dimensional space of such splines. 
+where $\varphi_j$ are basis functions for the $n$-dimensional space of such splines.
+
 --
 
 Cubic splines are piecewise degree 3 polynomials in between knots.
@@ -351,13 +360,8 @@ We recognize this as a *linear smoother* with smoother matrix $\mathbf{S}_{\lamb
 ---
 ## Splines in R
 
-```{r Matrix-package, echo=FALSE, cache=FALSE, message = FALSE, warning=FALSE}
+```{r splines, fig.width = 10, fig.height = 5, message = FALSE, warning = FALSE}
 library(Matrix)
-library(splines)
-```
-
-
-```{r splines, out.height = 333}
 library(splines)
 # Note the specification of repeated boundary knots
 knots <- c(0, 0, 0, seq(0, 1, 0.2), 1, 1, 1)
@@ -367,7 +371,7 @@ matplot(xx, B_splines, type = "l", lty = 1)
 ```
 
 ---
-## Penalty matrix
+## Penalty Matrix
 
 ```{r Omega-Simpson, echo=FALSE}
 pen_mat <- function(inner_knots) {
@@ -385,51 +389,51 @@ pen_mat <- function(inner_knots) {
 ```
 
 ```{r}
-# See notes for implementation of penalty matrix
+# See slide source for implementation of `pen_mat()`
 Omega <- pen_mat(seq(0, 1, 0.1))
 image(Matrix(Omega))
 ```
 
-
-
 ---
-## Fitting a smoothing spline
 
-We implement the matrix-algebra directly 
+## Fitting a Smoothing Spline
+
+We implement the matrix-algebra directly
 for computing $\mathbf{S}_{\lambda} \mathbf{y}$.
 
-```{r Nuuk-smooth-spline}
-inner_knots <- Nuuk_year$Year
+```{r nuuk-smooth-spline}
+inner_knots <- nuuk_year$Year
 knots <- c(rep(range(inner_knots), 3), inner_knots)
 Phi <- splineDesign(knots, inner_knots) #<<
 ```
 
 --
 
-```{r Nuuk-smooth-spline2}
+```{r nuuk-smooth-spline2}
 Omega <- pen_mat(inner_knots)
 smoother <- function(lambda) {
   Phi %*% solve(
     crossprod(Phi) + lambda * Omega, # Phi^T Phi + lambda Omega
-    t(Phi) %*% Nuuk_year$Temperature # Phi^T y
+    crossprod(Phi, nuuk_year$Temperature) # Phi^T y
   )
 }
 ```
 
 ---
-## Fitting a smoothing spline
 
-```{r}
-p + geom_line(aes(y = smoother(10)), color = "blue") + # Undersmooth
+class: middle
+
+```{r fig.width = 10}
+p + geom_line(aes(y = smoother(10)), color = "steelblue4") + # Undersmooth
   geom_line(aes(y = smoother(1000)), color = "red") + # Smooth
-  geom_line(aes(y = smoother(100000)), color = "purple") # Oversmooth
+  geom_line(aes(y = smoother(100000)), color = "orange") # Oversmooth
 ```
 
 ---
-## Generalized cross-validation
+## Generalized Cross-Validation
 
 With $\mathrm{df} = \mathrm{trace}(\mathbf{S}) = \sum_{i=1}^n S_{ii}$
-we  replace $S_{ii}$ in LOOCV by $\mathrm{df} / n$ to get the
+we replace $S_{ii}$ in LOOCV by $\mathrm{df} / n$ to get the
 *generalized* cross-validation criterion
 $$\mathrm{GCV} = \sum_{i=1}^n \left(\frac{y_i - \hat{f}_i}{1 - \mathrm{df} / n}\right)^2.$$
 --
@@ -445,29 +449,34 @@ gcv <- function(lambda, y) {
 
 
 ---
-## Generalized cross-validation
+## Generalized Cross-Validation
 
 Then we apply this function to a grid of $\lambda$-values and 
 choose the value of $\lambda$ that minimizes GCV.
 
-```{r Nuuk-spline-gcv, dependson=c("gcv-smooth-spline", "NuukData")}
+```{r nuuk-spline-gcv}
 lambda <- seq(50, 250, 2)
-GCV <- sapply(lambda, gcv, y = Nuuk_year$Temperature)
+GCV <- sapply(lambda, gcv, y = nuuk_year$Temperature)
 lambda_opt <- lambda[which.min(GCV)]
 ```
 
 ---
-## Generalized cross-validation
+## Generalized Cross-Validation
 
-```{r}
-qplot(lambda, GCV) + geom_vline(xintercept = lambda_opt, color = "red")
+```{r gc-plot, fig.width = 10, fig.height = 5}
+tibble(lambda, GCV) |>
+  ggplot(aes(lambda, GCV)) +
+  geom_line() +
+  geom_point() +
+  geom_vline(xintercept = lambda_opt, color = "dark orange")
 ```
 
 ---
-## Optimal smoothing spline
+## Optimal Smoothing Spline
 
-```{r Nuuk-spline-opt, dependson=c("Nuuk-spline-gcv", "NuukData")}
-# Optimal smoother using our implementation
+An optimal smoother using our implementation
+
+```{r nuuk-spline-opt, fig.width = 9, fig.height = 4.5}
 smooth_opt <- smoother(lambda_opt)
 p + geom_line(aes(y = smooth_opt), color = "blue")
 ```
@@ -475,21 +484,21 @@ p + geom_line(aes(y = smooth_opt), color = "blue")
 ---
 ## Using `smooth.spline()`
 
-```{r Nuuk-spline-opt2, dependson="NuukData"}
-# and using 'smooth.spline()' without fast heuristic
-smooth <- smooth.spline(Nuuk_year$Year, Nuuk_year$Temperature, all.knots = TRUE)
+Using `smooth.spline()` without fast heuristic.
+
+```{r nuuk-spline-opt2, fig.width = 9, fig.height = 4.5}
+smooth <- smooth.spline(nuuk_year$Year, nuuk_year$Temperature, all.knots = TRUE)
 p + geom_line(aes(y = smooth$y), color = "blue")
 ```
 
 ---
-## Efficient computations
+## Efficient Computations
 
 In practice we use $p < n$ basis functions.
 
-Using the singular value decomposition 
+Using the singular value decomposition
 $$\Phi = \mathbf{U} D \mathbf{V}^T$$
 --
-
 
 it holds that 
 $$\mathbf{S}_{\lambda} = \widetilde{\mathbf{U}}  (I + \lambda  \Gamma)^{-1} \widetilde{\mathbf{U}}^T$$
@@ -497,7 +506,8 @@ where $\widetilde{\mathbf{U}} = \mathbf{U} \mathbf{W}$ and
 $$D^{-1} \mathbf{V}^T \mathbf{\Omega} \mathbf{V} D^{-1} = \mathbf{W} \Gamma \mathbf{W}^T.$$
 
 ---
-## Efficient computations
+
+## Efficient Computations
 
 The interpretation of this representation is as follows. 
 
@@ -515,12 +525,12 @@ $$\hat{\beta}_i(\lambda) = \frac{\hat{\beta}_i}{1 + \lambda \gamma_i}.$$
 are computed as an expansion using the shrunken coefficients. 
 
 ---
-### The Demmler-Reinsch basis (columns of $\widetilde{\mathbf{U}}$)
 
+### The Demmler-Reinsch Basis (Columns of $\widetilde{\mathbf{U}}$)
 
-```{r spline-diagonalization, dependson=c("NuukData", "Omega-Simpson"), echo=FALSE, out.height="500"}
+```{r spline-diagonalization, echo=FALSE, fig.width = 12, fig.height = 7}
 inner_knots <- seq(1867, 2013, length.out = 18)
-Phi <- splineDesign(c(rep(range(inner_knots), 3), inner_knots), Nuuk_year$Year)
+Phi <- splineDesign(c(rep(range(inner_knots), 3), inner_knots), nuuk_year$Year)
 Omega <- pen_mat(inner_knots)
 Phi_svd <- svd(Phi)
 Omega_tilde <- t(t(crossprod(Phi_svd$v, Omega %*% Phi_svd$v)) / Phi_svd$d) / Phi_svd$d
@@ -531,7 +541,7 @@ Omega_tilde_svd <- svd(Omega_tilde)
 U_tilde <- Phi_svd$u %*% Omega_tilde_svd$u
 
 colnames(U_tilde) <- paste(rep("u", 20), 1:20, sep = "")
-bind_cols(select(Nuuk_year, Year), as_tibble(U_tilde)) %>%
+bind_cols(select(nuuk_year, Year), as_tibble(U_tilde)) %>%
   gather(key = "term", value = "value", -Year, factor_key = TRUE) %>%
   ggplot(aes(Year, value, color = term)) +
   geom_line() +
@@ -541,11 +551,24 @@ bind_cols(select(Nuuk_year, Year), as_tibble(U_tilde)) %>%
 ```
 
 ---
-## and the eigenvalues $\gamma_i$
 
-```{r spline-gamma, dependson="spline-diagonalization", echo=FALSE, fig.show='hold'}
-pp <- qplot(1:20, Omega_tilde_svd$d) + xlab("i") + ylab("Eigenvalues")
-gridExtra::grid.arrange(pp, pp + scale_y_log10())
+### and the Eigenvalues $\gamma_i$
+
+```{r spline-gamma, echo=FALSE, fig.height = 6, fig.width = 10}
+library(patchwork)
+
+# pp <- qplot(1:20, Omega_tilde_svd$d) + xlab("i") + ylab("Eigenvalues")
+d <- Omega_tilde_svd$d
+
+eigen_data <- tibble(i = 1:20, Eigenvalues = d)
+
+p1 <- ggplot(eigen_data, aes(i, Eigenvalues)) +
+  geom_point() +
+  labs(y = expression(gamma[i]))
+
+p2 <- p1 + scale_y_log10()
+
+p1 / p2
 ```
 
 
