chore: talk about silverman's rule of thumb for other kernels

--- a/lecture2.Rmd
+++ b/lecture2.Rmd
@@ -761,6 +761,10 @@ lines(density(phipsi$psi), col = "red", lwd = 2)
 ```
 ]
 
+???
+
+TODO: is silverman's rule of thumb fine for other kernels?
+
 ---
 ## Amino Acid Angles (Scott, using 1.06)
 
